fix: prevent address dropdown overflow, added missing leaflet marker images.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -192,6 +192,10 @@ tr:last-child td:last-child {
     color: $red-700 !important;
 }
 
+#addressDropdown>.dropdown-item {
+    white-space: normal;
+}
+
 #map {
     height: 50vh;
 }
